Fix overflow bugs. Fix #3

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -102,6 +102,7 @@ body {
 
 #toc {
   flex-grow: 1;
+  overflow: hidden;
 }
 
 @media (min-width: 768px) {
@@ -153,7 +154,7 @@ body {
   }
 
   #toc {
-    overflow-y: scroll;
+    overflow-y: auto;
   }
 }
 
